# testouille

./: pyproject.toml
src/: build_vector_db.py
src/common/: data.py  paths.py
src/common/websearch/: base.py  duckduckgo.py  google.py
src/extraction/: models.py  utils.py  wikipedia.py  yahoo.py
src/fetchers/: annual_reports.py  models.py  official_register.py  utils.py  wikipedia.py  yahoo.py
src/fetchers/official_registers/: factory.py  france.py
src/nace_classifier/: classifier.py  mapping.json  models.py
src/vector_db/: loaders.py  notices_nace.py
